src/config/loader/snapshots/unknown__config__loader__tests__invalid_task_path_inside_nested_task_file.snap
---
source: src/config/loader/tests.rs
expression: "render_miette(err, &test_files)"
---

  × Encountered some errors when validating config files

Error: 
  × The provided path was not in the workspace: //task.kdl
   ╭─[project/project.kdl:2:1]
 2 │ tasks {
 3 │     import "../../task.kdl"
   ·            ────────┬───────
   ·                    ╰── the path is referenced here
 4 │ }
   ╰────

